<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EnterPays_mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/add_person_header" />

    <CheckBox
        android:id="@+id/EnterPays_CheckBox_EverybodyPaysEqually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:text="@string/EnterPays_CheckBox_EqualPays"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/EnterPays_EditText_Name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_button"
            android:layout_toLeftOf="@+id/EnterPays_button_getPersonFromContacts"
            android:hint="@string/EnterPays_TextView_Name"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/EnterPays_button_getPersonFromContacts"
            android:layout_width="@dimen/height_button"
            android:layout_height="@dimen/height_button"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/EnterPays_button_getContact"
            android:src="@drawable/address_book" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/EnterPays_TextView_Pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/EnterPays_EditText_Pay"
            android:text="@string/EnterPays_TextView_Pay" />

        <EditText
            android:id="@+id/EnterPays_EditText_Pay"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"
            android:text="@string/EnterPays_TextView_ZeroValue" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/EnterPays_TextView_ShouldPay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/EnterPays_EditText_ShouldPay"
            android:text="@string/EnterPays_TextView_ShouldPay" />

        <EditText
            android:id="@+id/EnterPays_EditText_ShouldPay"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"
            android:text="@string/EnterPays_TextView_ZeroValue" />
    </RelativeLayout>

    
    <CheckBox
            android:id="@+id/EnterPays_gotGift_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/EnterPays_gotGift_text" />
            
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <CheckBox
            android:id="@+id/EnterPays_buysGift_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/EnterPays_EditText_giftValue"
            android:text="@string/EnterPays_buysGift_text" />

        <EditText
            android:id="@+id/EnterPays_EditText_giftValue"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"
            android:hint="@string/EnterPays_boughtGiftValue_hint"
            android:enabled="false" />
    </RelativeLayout>
<!--     
    <ListView
        android:id="@+id/EnterPays_List_People"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big" 
        android:visibility="gone">
    </ListView> -->


</LinearLayout>