<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/height_button"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/atomPay_name"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:background="@drawable/edittext_bgnd_gray_left"
        android:hint="@string/EnterPays_atomPay_nameHint"
        android:padding="@dimen/margin_normal"
        android:singleLine="true"
        style="@style/textMediumDark"
        android:textStyle="bold" />

    <pl.looksok.currencyedittext.CurrencyEditText
        android:id="@+id/atomPay_value"
        android:layout_width="@dimen/height_button_big"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:background="@drawable/edittext_bgnd_gray_middle"
        android:text="@string/EnterPays_TextView_ZeroValue"
        style="@style/textMediumDark"
        android:textStyle="bold"
         />

    <ImageButton
        android:id="@+id/atomPay_removePay"
        android:layout_width="@dimen/width_button"
        android:layout_height="fill_parent"
        android:contentDescription="@string/emptyText"
        android:onClick="removeAtomPayOnClickHandler"
        android:background="@drawable/button_bgnd_gray_right"
        android:src="@drawable/trashbin_icon" />
</LinearLayout>