<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/calc_listitem" >

    <RelativeLayout
        android:id="@+id/calcItem_mainBar_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/calc_listItem_mainBar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/calc_listItem_borderSize"
        android:layout_marginRight="@dimen/calc_listItem_borderSize"
        android:layout_marginTop="@dimen/calc_listItem_borderSize"
        android:background="@drawable/calc_listitem_name_gradient"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/calcItem_textView_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/calcItem_image_edit"
            android:gravity="center_vertical"
            android:text="@string/calculation_TextView_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/calcItem_image_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/calcItem_image_delete"
            android:contentDescription="@string/EnterPays_Menu_Edit"
            android:src="@drawable/content_edit" 
            android:onClick="edit"
            />

        <ImageView
            android:id="@+id/calcItem_image_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/EnterPays_Menu_Remove"
            android:src="@drawable/content_discard" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calcItem_itemContent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/calcItem_mainBar_layout"
        android:layout_marginBottom="@dimen/calc_listItem_borderSize"
        android:layout_marginLeft="@dimen/calc_listItem_borderSize"
        android:layout_marginRight="@dimen/calc_listItem_borderSize" >

        <TextView
            android:id="@+id/calcItem_details_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" >
        </TextView>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4" >

            <TextView
                android:id="@+id/calcItem_textView_personPay"
                style="@style/balancePositiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/calcItem_textView_currency"
                android:text="@string/calculation_TextView_personPay" />

            <TextView
                android:id="@+id/calcItem_textView_currency"
                style="@style/balancePositiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_micro"
                android:layout_marginRight="@dimen/margin_micro"
                android:text="@string/calculation_TextView_currency"
                />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>